--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@
 # To regenerate from the project's Pipfile, run:
 #
 #    pipenv lock --requirements
+#    or
+#    pip freeze > requirements.txt
 #
 
 -i https://pypi.org/simple
